# rollang

./: .gitignore  Cargo.toml  DRAFTS.md  GRAMMAR.md  IMPLEMENTATION.md  README.md  ROLLANG.md  USERGUIDE.md  pyproject.toml
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: expr.rs  stmt.rs
crates/parser/src/parser/: marker.rs
crates/rollang/: Cargo.toml
crates/rollang-cli/: Cargo.toml
crates/rollang-cli/src/: main.rs
crates/rollang/src/: lexer.rs  main.rs  parser.rs  syntax.rs
crates/rollang/src/parser/: event.rs  expr.rs  marker.rs  sink.rs  source.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/dev/: ideas.md  roadmap.md
docs/src/dev/arch/: architecture.md
docs/src/dev/spec/: datastructs.md  index-old.md  index.md  types.md
docs/src/rollang/: architecture.md  ideas.md  implementation.md  spec.md
docs/src/rollang/arch/: architecture.md  parsing.md
docs/src/rollang/lang/: design.md
docs/src/rollang/spec/: comments.md  index.md  types.md  varbind.md
docs/src/user/: guide.md
examples/: dice.roll  modifiers.roll
rollang/: error.py  parser.py  rollang.py  roller.py  rollerror.py  rolltoken.py  scanner.py  tokentype.py
rollang/ecs/: main.py  rollable.py
rollang/utils/: ezlog.py
src/: lib.rs  main.rs  parser.rs
