[package]
name = "rollang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
lexer = { path = "../lexer" }
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.15"
smol_str = "0.2.1"

[dev-dependencies]
expect-test = "1.0.1"
